--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -198,6 +198,14 @@
 
 	<script>
 
+
+
+$.ajax({
+	url:"/warehouse/fl-print-options",
+	success:function(workstations){
+
+	}
+})
 $('.flightdate').datetimepicker({
         format: 'MM/DD/YYYY',
     });
