--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -8,7 +8,7 @@
             <div class="card-header col-md-12">
                 <h3>Add New Package</h3> 
                 <div>
-                    <select>
+                    <select id='printer'>
                         <option>Select Your Printer</option>
                     </select>
 
@@ -70,7 +70,7 @@
                                         
 
                                          <div class='form-group'>
-                                            <label>Carrier </label><a href='#' data-target="#findshipper" data-toggle="modal">Add New Carrier</a>
+                                            <label>Carrier </label><a href='#' data-target="#findcarrier" data-toggle="modal">Add New Carrier</a>
                                             <!-- <input type='text' class='form-control carrier' id='carrier' name='carrier' value="<%=awb.carrier%>" /> -->
                                             <select id="pick-carrier" class='form-control' style='width:90%;'>
                                                 <option>Select Carrier</option>
