updated create po

--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -550,7 +550,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-success ship-manifest" id='ship-manifest'>Ship Manifest</button>
+                <button type="button" class="btn btn-success ship-manifest" id='ship-manifest'>Create PO</button>
             </div>
         </div>
     </div>
