--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>9-5 Admin Portal</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
+	<link rel="icon" href="../img/favicon.ico" type="image/x-icon" />
 
 	<!-- Fonts and icons -->
 	<script src="../assets/js/plugin/webfont/webfont.min.js"></script>
@@ -26,25 +27,24 @@
 <body class="login">
 	<div class="wrapper wrapper-login wrapper-login-full p-0">
 		<div
-			class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-secondary-gradient">
+			class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-primary-gradient">
 			<h1 class="title fw-bold text-white mb-3">9-5 Admin Portal</h1>
 			<p class="subtitle text-white op-7">9-5 Import</p>
 		</div>
 		<div class="login-aside w-50 d-flex align-items-center justify-content-center bg-white">
 			<div class="container container-login container-transparent animated fadeIn">
-				<h3 class="text-center">Sign In To Admin</h3>
+				<img src="../img/logo.jpg">
+				<h3 class="text-center mt-3">Sign In To Admin</h3>
 				<div class="login-form">
 					<div class="form-group">
 						<label for="username" class="placeholder"><b>Username </b></label>
-						<input id="username" placeholder="Username" name="username" type="text" class="form-control"
-							required>
+						<input id="username" placeholder="Username" name="username" type="text" class="form-control" required>
 					</div>
 					<div class="form-group">
 						<label for="password" class="placeholder"><b>Password</b></label>
 						<!-- <a href="#" class="link float-right forgot-password">Forget Password ?</a> -->
 						<div class="position-relative">
-							<input id="password" placeholder="Password" name="password" type="password"
-								class="form-control" required>
+							<input id="password" placeholder="Password" name="password" type="password" class="form-control" required>
 							<div class="show-password">
 								<i class="icon-eye"></i>
 							</div>
@@ -56,8 +56,7 @@
 							<input type="checkbox" class="custom-control-input" id="rememberme">
 							<label class="custom-control-label m-0" for="rememberme">Remember Me</label>
 						</div> -->
-						<a href="#"		class="btn btn-secondary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign
-							In</a>
+						<a href="#" class="btn btn-primary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign In</a>
 					</div>
 				</div>
 			</div>
