--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -4,12 +4,10 @@
 		<div class="sidebar-content">
 			<div class="user">
 				<div class="avatar-sm float-left mr-2">
-
 				</div>
 				<div class="info">
 					<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 						<span>
-							
 							<span class="user-level"><%=luser%></span>
 							<!-- <span class="caret"></span> -->
 						</span>
@@ -38,47 +36,46 @@
 				</div>
 			</div>
 			<ul class="nav nav-primary">
+				<li class="nav-section">
+					<span class="sidebar-mini-icon">
+						<i class="fa fa-ellipsis-h"></i>
+					</span>
+					<h4 class="text-section">Admin</h4>
+				</li>
 				<%if (RoleId.indexOf("Admin")>-1 ) {%>
 				<li class="nav-item">
-					<a data-toggle="collapse" href="#admin" class="collapsed" aria-expanded="false">
-						<i class="fas fa-home"></i>
-						<p>Admin</p>
-						<span class="caret"></span>
+					<a href="/admin">
+						<i class="fa fa-home"></i>
+						<p>Admin Dashboard </p>
 					</a>
-					<div class="collapse" id="admin">
-						<ul class="nav nav-collapse">
-							<li>
-								<a href="/admin/">
-									<span class="sub-item">Admin Dashboard</span>
-								</a>
-							</li>
-							<li>
-								<a href="/admin/users">
-									<span class="sub-item">Users</span>
-								</a>
-							</li>
-							<li>
-								<a href="/admin/customersV1">
-									<span class="sub-item">Customers</span>
-								</a>
-							</li>
-							<li>
-								<a href="/admin/locations">
-									<span class="sub-item">Locations</span>
-								</a>
-							</li>
-						</ul>
-					</div>
+				</li>
+				<li class="nav-item">
+					<a href="/admin/users">
+						<i class="fa fa-users"></i>
+						<p>Users </p>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="/admin/customersV1">
+						<i class="fa fa-user-tie"></i>
+						<p>Customers</p>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="/admin/locations">
+						<i class="fa fa-map-marker-alt"></i>
+						<p>Locations </p>
+					</a>
 				</li>
 				<%}%>
 				<%if (RoleId.indexOf("Admin")>-1 || RoleId.indexOf("Warehouse Fl")>-1) {%>
 				<li class='nav-item'>
-						<div id="current-printer" style='color:gray'></div>
-						<select id='workstations' class='form-control workstations'>
-								<option value="">Select Your Printer</option>
-							</select>
-							
-							<button id='set-printer' class='btn btn-info btn-sm mt-1 pull-right mb-1'>SET</button>
+					<div id="current-printer" style='color:gray'></div>
+					<select id='workstations' class='form-control workstations'>
+						<option value="">Select Your Printer</option>
+					</select>
+
+					<button id='set-printer' class='btn btn-info btn-sm mt-1 pull-right mb-1'>SET</button>
 				</li>
 				<li class="nav-item">
 					<a data-toggle="collapse" href="#warehouse">
@@ -88,27 +85,27 @@
 					</a>
 					<div class="collapse" id="warehouse">
 						<ul class="nav nav-collapse">
-							
-								<!-- <li>
+
+							<!-- <li>
 										<a href="/warehouse/incoming-shiptment">
 											<span class="sub-item">Incoming Shipment</span>
 										</a>
 									</li> -->
-								<li>
-										<a href="/warehouse/fll-new-package">
-											<span class="sub-item">Carrier Packages </span>
-										</a>
-									</li>
-									<li>
-										<a href="/warehouse/fll-no-docs">
-											<span class="sub-item">No Docs</span>
-										</a>
-									</li>
-									<li>
-									<a href="/warehouse/packages-on-hand">
-										<span class="sub-item">Packages on Hands</span>
-									</a>
-								</li>
+							<li>
+								<a href="/warehouse/fll-new-package">
+									<span class="sub-item">Carrier Packages </span>
+								</a>
+							</li>
+							<li>
+								<a href="/warehouse/fll-no-docs">
+									<span class="sub-item">No Docs</span>
+								</a>
+							</li>
+							<li>
+								<a href="/warehouse/packages-on-hand">
+									<span class="sub-item">Packages on Hands</span>
+								</a>
+							</li>
 							<li>
 								<a href="/warehouse/list-manifest">
 									<span class="sub-item">Load Flight</span>
@@ -138,16 +135,16 @@
 											</a>
 										</li>
 										<li>
-												<a href="/fleet/pilots">
-													<span class="sub-item">Pilots</span>
-												</a>
-											</li>
+											<a href="/fleet/pilots">
+												<span class="sub-item">Pilots</span>
+											</a>
+										</li>
 										<li>
 											<a href="/fleet/drivers">
 												<span class="sub-item">Drivers</span>
 											</a>
 										</li>
-										
+
 									</ul>
 								</div>
 							</li>
@@ -174,21 +171,21 @@
 					</a>
 					<div class="collapse" id="wnas">
 						<ul class="nav nav-collapse">
-								<li>
-										<a href="/warehouse/nas-no-docs">
-											<span class="sub-item">No Docs</span>
-										</a>
-									</li>
+							<li>
+								<a href="/warehouse/nas-no-docs">
+									<span class="sub-item">No Docs</span>
+								</a>
+							</li>
 							<li>
 								<a href="/warehouse/incoming-flights">
 									<span class="sub-item">Incoming Flights</span>
 								</a>
 							</li>
 							<li>
-									<a href="/warehouse/nas-packages-wh">
-										<span class="sub-item">Packages on Hand</span>
-									</a>
-								</li>
+								<a href="/warehouse/nas-packages-wh">
+									<span class="sub-item">Packages on Hand</span>
+								</a>
+							</li>
 							<!-- <li>
 								<a href="#">
 									<span class="sub-item">Checkout</span>
@@ -223,7 +220,7 @@
 												<span class="sub-item">Drivers</span>
 											</a>
 										</li>
-										
+
 									</ul>
 								</div>
 							</li>
@@ -255,7 +252,7 @@
 									<span class="sub-item">Check In Package</span>
 								</a>
 							</li>
-						
+
 							<!-- <li>
 								<a href="/users/add-locations">
 									<span class="sub-item">Add</span>
@@ -286,13 +283,14 @@
 									<span class="sub-item">Change Password</span>
 								</a>
 							</li>
-							<li>
-								<a href="/logout">
-									<span class="sub-item">Logout</span>
-								</a>
-							</li>
 						</ul>
 					</div>
+				</li>
+				<li class="nav-item  ">
+					<a href="/logout">
+						<i class="fa fa-sign-out-alt"></i>
+						<p>Logout </p>
+					</a>
 				</li>
 			</ul>
 		</div>
