--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
 	<script src="../assets/js/core/popper.min.js"></script>
 	<script src="../assets/js/core/bootstrap.min.js"></script>
 	<script src="../assets/js/atlantis.min.js"></script>
-	<script src="../js/login.js"></script>
+	<script src="../js/auth/login.js"></script>
 </body>
 
 </html>
