--- a/views/shared/__main_header.ejs
+++ b/views/shared/__main_header.ejs
@@ -5,8 +5,8 @@
 		<a href="/admin" class="logo">
 			<img src="/img/logo.jpg" width="108" alt="navbar brand" class="navbar-brand">
 		</a>
-		<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
-			data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse"
+			aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon">
 				<i class="icon-menu"></i>
 			</span>
@@ -259,7 +259,6 @@
 							<a href="#" id="userSettings" class="user-settings" data-toggle="dropdown"
 								aria-haspopup="true">
 								<img class="avatar" src="/img/logo-square.jpg" alt="User Thumb" />
-								<span class="user-name"><%=luser%></span>
 								<i class="icon-chevron-small-down"></i>
 							</a>
 							<div class="dropdown-menu lg dropdown-menu-right" aria-labelledby="userSettings">
