--- a/views/shared/__navigation.ejs
+++ b/views/shared/__navigation.ejs
@@ -1,6 +1,6 @@
 <nav class="side-nav">
     <ul class="nav nav-primary" id="unifyMenu">
-        <%if (RoleId.indexOf("Admin")>-1){%>
+        <%if (roleId.indexOf("Admin")>-1){%>
         <li class="active selected">
             <a href="#" class="has-arrow" aria-expanded="false">
                 <span class="has-icon">
