User CRUD Updated

--- a/views/pages/admin/user/list.ejs
+++ b/views/pages/admin/user/list.ejs
@@ -4,7 +4,7 @@
     <div class="card">
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
         <div class="card-title">System Users</div>
-        <a href='/admin/user/' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a>
+        <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a>
       </div>
       <div class="card-body">
         <table class="table user-table m-0">
