--- a/views/pages/admin/user/edit.ejs
+++ b/views/pages/admin/user/edit.ejs
@@ -3,22 +3,24 @@
   <div class="row gutters">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
       <div class="card">
-        <div class="card-header"><%= title %></div>
+        <div class="card-header">
+          <h4 class="card-title"><%= title%></h4>
+        </div>
         <div class="card-body">
           <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" name='username' id="username" placeholder="" required
-              value='<%=userDetail.username %>'>
+              value='<%=userDetail.username %>' readonly>
             <input type='hidden' name='id' value='<%=userDetail.id%>'>
           </div>
           <div class="form-group">
-            <label for="firstname">First Name</label>
-            <input type="text" class="form-control" name='firstname' id="firstname" placeholder="" required
+            <label for="firstName">First Name</label>
+            <input type="text" class="form-control" name='firstName' id="firstName" placeholder="" required
               value='<%=userDetail.firstName %>'>
           </div>
           <div class="form-group">
-            <label for="lastname">LastName</label>
-            <input type="text" class="form-control" name='lastname' id="lastname" placeholder="" required
+            <label for="lastName">LastName</label>
+            <input type="text" class="form-control" name='lastName' id="lastName" placeholder="" required
               value='<%=userDetail.lastName %>'>
           </div>
           <div class="form-group">
