--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -56,7 +56,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/admin/customersV1">
+					<a href="/admin/customers/list">
 						<i class="fa fa-user-tie"></i>
 						<p>Customers</p>
 					</a>
