User Forms Updated

--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -11,7 +11,7 @@
 	<meta name="keywords"
 		content="Admin, Dashboard, Bootstrap4, Sass, CSS3, HTML5, Responsive Dashboard, Responsive Admin Template, Admin Template, Best Admin Template, Bootstrap Template, Themeforest" />
 	<meta name="author" content="Bootstrap Gallery" />
-	<link rel="icon" href="../img/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 	<title>9-5 Imports </title>
 
 	<script src="/assets/js/plugin/webfont/webfont.min.js"></script>
