--- a/views/pages/admin/user/edit.ejs
+++ b/views/pages/admin/user/edit.ejs
@@ -7,44 +7,59 @@
           <h4 class="card-title"><%= title%></h4>
         </div>
         <div class="card-body">
-          <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" name='username' id="username" placeholder="" required
-              value='<%=userDetail.username %>' readonly>
-            <input type='hidden' name='id' value='<%=userDetail.id%>'>
+          <div class="form-group form-show-validation row">
+            <label for="username" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Username
+              <span class="required-label">*</span></label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="text" class="form-control" id="username" name="username" placeholder="Username" required
+                value='<%=userDetail.username %>' readonly>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="firstName">First Name</label>
-            <input type="text" class="form-control" name='firstName' id="firstName" placeholder="" required
-              value='<%=userDetail.firstName %>'>
+          <div class="form-group form-show-validation row">
+            <label for="firstName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">First Name
+              <span class="required-label">*</span></label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" required
+                value='<%=userDetail.firstName %>'>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="lastName">LastName</label>
-            <input type="text" class="form-control" name='lastName' id="lastName" placeholder="" required
-              value='<%=userDetail.lastName %>'>
+          <div class="form-group form-show-validation row">
+            <label for="lastName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Last Name
+              <span class="required-label">*</span></label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" required
+                value='<%=userDetail.lastName %>'>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" name='email' placeholder="name@example.com"
-              value='<%=userDetail.email %>'>
+          <div class="form-group form-show-validation row">
+            <label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Email</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="text" class="form-control" id="email" name="email" placeholder="Email Address"
+                value='<%=userDetail.email %>'>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="mobile">Mobile</label>
-            <input type="text" class="form-control" id="mobile" name='mobile' placeholder="(xxx)-xxx-xxxx"
-              value='<%=userDetail.mobile %>'>
+          <div class="form-group form-show-validation row">
+            <label for="mobile" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Mobile</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="number" class="form-control" id="mobile" name="mobile" placeholder="(xxx)-xxx-xxxx"
+                value='<%=userDetail.mobile %>'>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="userRole">Select User Permission</label>
-            <select class="form-control" id="userRole" name='userRole' multiple="multiple">
-              <% roles.forEach(role => { %>
-              <option value="<%= role%>" <% if(userDetail.role.includes(role)) { %> selected <% } %>> <%= role %>
-              </option>
-              <% }) %>
-            </select>
+          <div class="form-group form-show-validation row">
+            <label for="userRole" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Select User Permission
+              <span class="required-label">*</span></label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <select class="form-control" id="userRole" name='userRole' multiple="multiple">
+                <% roles.forEach(role => { %>
+                <option value="<%= role%>" <% if(userDetail.role.includes(role)) { %> selected <% } %>> <%= role %>
+                </option>
+                <% }) %>
+              </select>
+            </div>
           </div>
         </div>
         <div class="card-action">
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="submit" class="btn btn-primary">Update</button>
           <button type="button" id="cancelForm" class="btn btn-danger">Cancel</button>
         </div>
       </div>
