--- a/views/shared/__main_header.ejs
+++ b/views/shared/__main_header.ejs
@@ -2,7 +2,7 @@
 <div class="main-header">
 	<!-- Logo Header -->
 	<div class="logo-header" data-background-color="white">
-		<a href="/admin" class="logo">
+		<a href="/dashboard" class="logo">
 			<img src="/img/logo.jpg" width="108" alt="navbar brand" class="navbar-brand">
 		</a>
 		<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse"
