Change Password, Location Form Changed

--- a/views/pages/admin/location/create.ejs
+++ b/views/pages/admin/location/create.ejs
@@ -30,8 +30,8 @@
     <div class="card-action">
       <div class="row">
         <div class="col-md-12">
-          <input class="btn btn-primary" type="submit" value="Save">
-          <button class="btn btn-danger" id="cancel">Cancel</button>
+          <button type="submit" class="btn btn-primary">Create</button>
+          <button type="button" class="btn btn-danger" id="cancelForm">Cancel</button>
         </div>
       </div>
     </div>
