--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -66,6 +66,13 @@
 					</a>
 				</li>
 				<%}%>
+
+				<li class="nav-section">
+					<span class="sidebar-mini-icon">
+						<i class="fa fa-ellipsis-h"></i>
+					</span>
+					<h4 class="text-section">Warehouse</h4>
+				</li>
 				<%if (user.role.includes('Admin') || user.role.includes("Warehouse Fl")) {%>
 				<li class='nav-item'>
 					<div id="current-printer" style='color:gray'></div>
@@ -114,38 +121,6 @@
 									<span class="sub-item">Reports</span>
 								</a>
 							</li> -->
-							<li class="nav-item">
-								<a data-toggle="collapse" href="#fleet">
-									<i class="fas fa-truck"></i>
-									<p>Fleet Management</p>
-									<span class="caret"></span>
-								</a>
-								<div class="collapse" id="fleet">
-									<ul class="nav nav-collapse">
-										<li>
-											<a href="/fleet/vehicles">
-												<span class="sub-item">Vehicles</span>
-											</a>
-										</li>
-										<li>
-											<a href="/fleet/planes">
-												<span class="sub-item">Planes</span>
-											</a>
-										</li>
-										<li>
-											<a href="/fleet/pilots">
-												<span class="sub-item">Pilots</span>
-											</a>
-										</li>
-										<li>
-											<a href="/fleet/drivers">
-												<span class="sub-item">Drivers</span>
-											</a>
-										</li>
-
-									</ul>
-								</div>
-							</li>
 							<!-- <li>
 								<a href="/warehouse/processing">
 									<span class="sub-item">Bahamas Processing</span>
@@ -194,7 +169,6 @@
 									<span class="sub-item">Check In Package</span>
 								</a>
 							</li> -->
-
 							<li>
 								<a href="/warehouse/deliveries">
 									<span class="sub-item">Deliveries</span>
@@ -206,21 +180,39 @@
 									<p>Fleet Management</p>
 									<span class="caret"></span>
 								</a>
-								<div class="collapse" id="fleetnas">
-									<ul class="nav nav-collapse">
-										<li>
-											<a href="/fleet/vehicles">
-												<span class="sub-item">Vehicles</span>
-											</a>
-										</li>
-										<li>
-											<a href="/fleet/drivers">
-												<span class="sub-item">Drivers</span>
-											</a>
-										</li>
-
-									</ul>
-								</div>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<%}%>
+				<%if (user.role.includes("Admin") || user.role.includes("Warehouse NAS") || user.role.includes("Warehouse Fl")) {%>
+				<li class="nav-item">
+					<a data-toggle="collapse" href="#fleet">
+						<i class="fas fa-truck"></i>
+						<p>Fleet Management</p>
+						<span class="caret"></span>
+					</a>
+					<div class="collapse" id="fleet">
+						<ul class="nav nav-collapse">
+							<li>
+								<a href="/fleet/vehicles">
+									<span class="sub-item">Vehicles</span>
+								</a>
+							</li>
+							<li>
+								<a href="/fleet/planes">
+									<span class="sub-item">Planes</span>
+								</a>
+							</li>
+							<li>
+								<a href="/fleet/pilots">
+									<span class="sub-item">Pilots</span>
+								</a>
+							</li>
+							<li>
+								<a href="/fleet/drivers">
+									<span class="sub-item">Drivers</span>
+								</a>
 							</li>
 						</ul>
 					</div>
@@ -241,10 +233,10 @@
 								</a>
 							</li>
 							<!-- <li>
-								<a href="#">
-									<span class="sub-item">Checkout</span>
-								</a>
-							</li> -->
+					<a href="#">
+						<span class="sub-item">Checkout</span>
+					</a>
+				</li> -->
 							<li>
 								<a href="/warehouse/store-check-in">
 									<span class="sub-item">Check In Package</span>
@@ -252,10 +244,10 @@
 							</li>
 
 							<!-- <li>
-								<a href="/users/add-locations">
-									<span class="sub-item">Add</span>
-								</a>
-							</li> -->
+					<a href="/users/add-locations">
+						<span class="sub-item">Add</span>
+					</a>
+				</li> -->
 						</ul>
 					</div>
 				</li>
