--- a/views/pages/fleet/add-driver.ejs
+++ b/views/pages/fleet/add-driver.ejs
@@ -2,7 +2,6 @@
 <div class="card">
 	<div class="card-header">
 		<div class="card-title">Add Driver</div>
-		
 	</div>
 	<form id="exampleValidation">
 		<div class="card-body">
@@ -10,27 +9,24 @@
 				<label for="vehicle_make" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">First Name <span
 						class="required-label">*</span></label>
 				<div class="col-lg-4 col-md-9 col-sm-8">
-					<input type="text" class="form-control" id="first_name" name="name" placeholder="Enter First Name"
-						required>
+					<input type="text" class="form-control" id="first_name" name="name" placeholder="Enter First Name" required>
 				</div>
 			</div>
 			<div class="form-group form-show-validation row">
 				<label for="vehicle_make" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Last Name <span
 						class="required-label">*</span></label>
 				<div class="col-lg-4 col-md-9 col-sm-8">
-					<input type="text" class="form-control" id="first_name" name="name" placeholder="Enter First Name"
-						required>
+					<input type="text" class="form-control" id="first_name" name="name" placeholder="Enter First Name" required>
 				</div>
 			</div>
 			<div class="form-group form-show-validation row">
 				<label for="vehicle_make" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Drivers License <span
 						class="required-label">*</span></label>
 				<div class="col-lg-4 col-md-9 col-sm-8">
-					<input type="text" class="form-control" id="lisc" name="lisc" placeholder="Drivers Lisc"
-						required>
+					<input type="text" class="form-control" id="lisc" name="lisc" placeholder="Drivers Lisc" required>
 				</div>
 			</div>
-		
+
 			<div class="form-group form-show-validation row">
 				<label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Email Address <span
 						class="required-label">*</span></label>
@@ -43,12 +39,9 @@
 				<label for="mobile" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Mobile <span
 						class="required-label">*</span></label>
 				<div class="col-lg-4 col-md-9 col-sm-8">
-					<input type="text" class="form-control" id="mobile" name="mobile"
-						placeholder="Enter Mobile Phone" required>
+					<input type="text" class="form-control" id="mobile" name="mobile" placeholder="Enter Mobile Phone" required>
 				</div>
 			</div>
-		
-		
 		</div>
 		<div class="card-action">
 			<div class="row">
