--- a/views/pages/admin/customers/create.ejs
+++ b/views/pages/admin/customers/create.ejs
@@ -8,10 +8,20 @@
         </div>
         <div class="card-body">
           <div class="form-group form-show-validation row">
-            <label for="pmb" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Skybox
+            <label for="companyId" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Company
               <span class="required-label">*</span></label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="number" class="form-control" id="pmb" name="pmb" placeholder="Skybox" required>
+              <select id="companyId" name="companyId" class=" form-control " required>
+                <option value='9to5'>9to5</option>
+                <option value='pmb'>Post Boxes</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group form-show-validation row">
+            <label for="pmb" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">PMB
+              <span class="required-label">*</span></label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" value="9000" readonly>
             </div>
           </div>
           <div class="form-group form-show-validation row">
