--- a/views/pages/admin/customers/edit.ejs
+++ b/views/pages/admin/customers/edit.ejs
@@ -9,11 +9,11 @@
         <div class="card-body">
           <input type="hidden" id="id" name="id" value="<%=customer.id%>">
           <div class="form-group form-show-validation row">
-            <label for="pmb" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Skybox
+            <label for="pmb" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">PMB
               <span class="required-label">*</span></label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="number" class="form-control" id="pmb" name="pmb" placeholder="Skybox" required
-                value="<%=customer.pmb%>">
+              <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" required
+                value="<%=customer.pmb%>" <% if(customer.companyId.includes('9to5')) { %> readonly <% } %>>
             </div>
           </div>
           <div class="form-group form-show-validation row">
