--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -76,15 +76,14 @@
 					<h4 class="text-section">Warehouse</h4>
 				</li>
 				<%if (user.role.includes('Admin') || user.role.includes("Warehouse Fl")) {%>
-				<li class='nav-item'>
+				<!-- <li class='nav-item'>
 					<div id="current-printer" style='color:gray'></div>
 					<select id='workstations' class='form-control workstations'>
 						<option value="">Select Your Printer</option>
 					</select>
-
 					<button id='set-printer' class='btn btn-info btn-sm mt-1 pull-right mb-1'>SET</button>
-				</li>
-				<li class="nav-item">
+				</li> -->
+				<li class="nav-item <% if (page.includes('/warehouse/fll/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#warehouse">
 						<i class="fas fa-warehouse"></i>
 						<p>Warehouse FLL</p>
@@ -92,19 +91,18 @@
 					</a>
 					<div class="collapse" id="warehouse">
 						<ul class="nav nav-collapse">
-
 							<!-- <li>
 										<a href="/warehouse/incoming-shiptment">
 											<span class="sub-item">Incoming Shipment</span>
 										</a>
 									</li> -->
 							<li>
-								<a href="/warehouse/fll-new-package">
+								<a href="/warehouse/fll/package/create">
 									<span class="sub-item">Carrier Packages </span>
 								</a>
 							</li>
 							<li>
-								<a href="/warehouse/fll-no-docs">
+								<a href="/warehouse/fll/fll-no-docs">
 									<span class="sub-item">No Docs</span>
 								</a>
 							</li>
